# CLI_Rendererer_cpp

./: .gitignore  CMakeLists.txt  README.md  linux_debug.sh
source/: main.cpp  snake_game.cpp
source/headerFiles/: console_renderer.h  food.h  snake_game.h  snake_node.h
src/: CMakeLists.txt  ansi_escapes.cpp  console.cpp  console_renderer.cpp  food.cpp  main.cpp  renderable_object.cpp  renderer.cpp  snake_game.cpp  text_box.cpp
src/CLI_renderer_lib/: CMakeLists.txt  console.cpp  input_manager.h  layers.h  pos_comparator.h  position.h  renderable_object.cpp  renderable_object.h  renderer.cpp  renderer.h  text_box.cpp  timer.h
src/headerFiles/: ansi_escapes.h  console.h  console_renderer.h  food.h  input_manager.h  layers.h  position.h  renderable_object.h  renderer.h  snake_game.h  snake_node.h  text_box.h
src/header_files/: food.h  snake_game.h  snake_node.h
